[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"

[[bin]]
name = "2015-01"
path = "src/2015-01/main.rs"

[[bin]]
name = "2015-02"
path = "src/2015-02/main.rs"

[[bin]]
name = "2015-03"
path = "src/2015-03/main.rs"

[[bin]]
name = "2015-04"
path = "src/2015-04/main.rs"
